NCLSUP-430 Target JDK8 to avoid extension loading issues in PNC